[package]
name = "ocaml-interop"
version = "0.10.0" # remember to update html_root_url
authors = ["Bruno Deferrari <utizoc@gmail.com>"]
license = "MIT"
description = "Utilities for Rust and OCaml interoperability"
homepage = "https://github.com/tizoc/ocaml-interop"
repository = "https://github.com/tizoc/ocaml-interop"
keywords = ["ocaml", "rust", "ffi", "interop"]
edition = "2018"
exclude = [
    ".github/*",
]

[package.metadata.docs.rs]
features = [ "without-ocamlopt", "caml-state" ]

[dependencies]
ocaml-sys = "0.23"
ocaml-boxroot-sys = { git = "https://gitlab.com/ocaml-rust/ocaml-boxroot.git", rev="652d92b1" }
static_assertions = "1.1.0"

[features]
without-ocamlopt = ["ocaml-sys/without-ocamlopt"]
caml-state = ["ocaml-sys/caml-state"]
no-caml-startup = []
