[package]
name = "ocaml-interop"
version = "0.10.0" # remember to update html_root_url
authors = ["Bruno Deferrari <utizoc@gmail.com>"]
license = "MIT"
description = "Utilities for Rust and OCaml interoperability"
homepage = "https://github.com/tizoc/ocaml-interop"
repository = "https://github.com/tizoc/ocaml-interop"
keywords = ["ocaml", "rust", "ffi", "interop"]
edition = "2021"
exclude = [
    ".github/*",
]

[package.metadata.docs.rs]
features = [ "without-ocamlopt" ]

[dependencies]
ocaml-sys = { version = "0.26", features = ["ocaml5"] }
ocaml-boxroot-sys = "0.4"
static_assertions = "1.1.0"

[features]
without-ocamlopt = ["ocaml-sys/without-ocamlopt"]
no-caml-startup = []
