[package]
name = "ocaml-interop"
version = "0.11.1" # remember to update html_root_url
authors = ["Bruno Deferrari <utizoc@gmail.com>"]
license = "MIT"
description = "Utilities for Rust and OCaml interoperability"
homepage = "https://github.com/tizoc/ocaml-interop"
repository = "https://github.com/tizoc/ocaml-interop"
keywords = ["ocaml", "rust", "ffi", "interop"]
edition = "2021"
exclude = [
    ".github/*",
]

[package.metadata.docs.rs]
no-default-features = true
features = [ "without-ocamlopt" ]

[dependencies]
ocaml-sys = { version = "0.26", features = ["ocaml5"] }
ocaml-boxroot-sys = { version = "0.4.0", default-features = false }
static_assertions = "1.1.0"
ocaml-interop-derive = { path = "derive", version = "0.1.0" }

[features]
default = ["boxroot"]
boxroot = ["ocaml-boxroot-sys/bundle-boxroot"]
without-ocamlopt = ["ocaml-sys/without-ocamlopt"]
no-caml-startup = []

[workspace]
members = [
    ".",
    "derive",
    "testing/rust-caller",
    "testing/ocaml-caller/rust"
]
