[package]
name = "callable_rust"
version = "0.1.0"
authors = ["Bruno Deferrari <utizoc@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
ocaml-interop = { path = "../../../../.." }
# Above is for building with dune, bellow is for building from this directory
# ocaml-interop = { path = "../../.." }
